--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -22,7 +22,7 @@
                 <div class="description line-1"> Kriti's Azure DevOps Project has been successfully setup</div>
                 <div class="description line-2"> Your HTML app is up and running on Azure</div>
                 <div class="next-steps-container">
-                    <div class="next-steps-header">Next up</div>
+                    <div class="next-steps-header">Assignment 1 successfully completed</div>
                     <div class="next-steps-body">
                         <div class="step">
                             <div class="step-icon">
